--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <h2>&nbsp;</h2>
     </header>
     <section>
-        <h2>This is my first website!</h2>
-        <p></p>
+        <h2>Who am I?</h2>
+        <p>I am Neil Rehani, who loves coding, reading, French, art, and more!</p>
     </section>
     <article id="interests">
         <h2>My Interests</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>I love computers! I just love them. They are so interesting! Auxilliary, Primary Memories. HTML, CSS, JS, Kotlin, Java, C# and more!</p>
     </article>
     <article>
         <h2>My hobbies</h2>
