--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="styles.css"></link>
 	<script>
 	function go() {
-	var tag = document. createElement("p"); // <p></p>
-	var text = document. createTextNode("Thank You!");
+	var tag = document.createElement("p"); // <p></p>
+	var text = document.createTextNode("Thank You!");
 	tag. appendChild(text); // <p>TEST TEXT</p>
 	var element = document.getElementsByTagName("footer")[0];
 	element. appendChild(tag); // <body> <p>TEST TEXT</p> </body>
@@ -22,12 +22,12 @@
         <h2>&nbsp;</h2>
     </header>
     <section>
-        <h2>This is my first website!</h2>
+        <h2>I am a programmer, and a web developer!</h2>
         <p></p>
     </section>
     <article id="interests">
         <h2>My Interests</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>I love web development. I started web development by learning JavaScript when I was only 10. Eventually I strengthened my HTML and CSS knowledge and started making apps with Bootstrap 5. I went on to make apps like a JSON extractor, a notes app using JavaScript local storage, some marvelous CSS animations, a weather app (using React Native, though I will not be making apps for you all with it) and a To-do App (also using React Native) and even a React news app! Thank you!</p>
     </article>
     <article>
         <h2>My hobbies</h2>
