--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <article id="interests" class="one">
         <h2>My Interests</h2>
-        <p>I love web development. At the same time, I sometimes try to learn machine learning too. I adore app development and my hobby is to try out unpopular and unheard of programming languages like RedLang, Fortran, BASIC, Perl, and more!</p>
+        <p>I love web development. At the same time, I sometimes try to learn machine learning too. I adore app development and my hobby is to try out unpopular and unheard of languages like RedLang!</p>
 	<br>
     </article>
     <article class = "one">
@@ -58,6 +58,22 @@
                 French
             </li>
         </ul>
+    </article>
+	<article class = "one">
+        <h2>My Projects</h2>
+        <ul>
+
+            <li>
+                <a href="https://tech-notes1409.netlify.app/">TechNotes</a>
+            </li>
+            <li>
+                <a href="https://tech-json.netlify.app/">TechJSON</a>
+            </li>
+		<li>
+                <a href="https://tech-weather.netlify.app/">TechWeather (React Native)</a>
+            </li>
+        </ul>
+And many more!
     </article>
     <article id="contact" class="one">
         <h2>Contact Me</h2>
